edited FWA, added new MDP mobile images, edited ANG

--- a/FWA/style.css
+++ b/FWA/style.css
@@ -40,6 +40,9 @@ h2 {
 		color: #fff;
 		position: relative;
 	}
+	.active {
+		opacity: .75;
+	}
 .logo {
 	text-align: center;
 	margin-top: 50px;
