--- a/Ansell Grim/i_www/css/jquery.simplyscroll.css
+++ b/Ansell Grim/i_www/css/jquery.simplyscroll.css
@@ -55,7 +55,6 @@ Note all DIVs are generated and should not be hard-coded
 		}
 	
 		.simply-scroll-list li img {
-			border: none;
 			display: block;
 		}
 	
@@ -139,22 +138,26 @@ Note all DIVs are generated and should not be hard-coded
 */
 
 .simply-scroll { /* Customisable base class for style override DIV */
-	width: 576px;
-	height: 200px;
+	width: 940px;
+	height: 398px;
 	margin-bottom: 1em;
+	position: relative;
 }
 
 	.simply-scroll .simply-scroll-clip {
-		width: 576px;
-		height: 200px;
+		width: 940px;
+		height: 398px;
 	}
 	
-		.simply-scroll .simply-scroll-list {}
+		.simply-scroll .simply-scroll-list {
+			width: 0px;
+			height: 398px;
+			
+		}
 		
 		.simply-scroll .simply-scroll-list li {
 			float: left;
-			width: 290px;
-			height: 200px;
+			position: relative;
 		}
 		.simply-scroll .simply-scroll-list li img {}
 	
@@ -178,42 +181,5 @@ Note all DIVs are generated and should not be hard-coded
 	
 
 
-/* Vertical scroller example */
 
-.vert { /* wider than clip to position buttons to side */
-	width: 340px;
-	height: 400px;
-	margin-bottom: 1.5em;
-}
-
-	.vert .simply-scroll-clip {
-		width: 290px;
-		height: 400px;
-	}
-	
-		.vert .simply-scroll-list {}
-		
-		.vert .simply-scroll-list li {
-			width: 290px;
-			height: 200px;
-		}
-		.vert .simply-scroll-list li img {}
-	
-	.vert .simply-scroll-btn {}
-
-	.vert .simply-scroll-btn-up { /* modified btn pos */
-		right: 0;
-		top: 0;
-	}
-	.vert .simply-scroll-btn-up.disabled {}
-	.vert .simply-scroll-btn-up:hover {}
-	
-	.vert .simply-scroll-btn-down { /* modified btn pos */
-		right: 0;
-		top: 52px;
-	}
-	.vert .simply-scroll-btn-down.disabled {}
-	.vert .simply-scroll-btn-down:hover {}
-	
-	/* NOTE left-right classes wouldn't be needed on vertical scroller */
 
